# Retriva

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOY.md  README.md  agents.md  docker-compose.yml  pyproject.toml
.cursor/: scratchpad.md
.cursor/rules/: architecture.mdc  backend.mdc  code-style.mdc  frontend.mdc  infrastructure.mdc  never-do.mdc  retrieval.mdc
.cursor/skills/debug-ingestion/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
backend/: main.py
backend/core/: config.py  qdrant_client.py  redis_client.py
backend/graphs/: __init__.py  query_pipeline.py
backend/models/: schemas.py
backend/routers/: __init__.py  collections.py  documents.py  ingest.py  query.py  status.py  workspace_preferences.py
backend/services/: bm25_index.py  chunker.py  collections.py  document_delete.py  document_index.py  embedder.py  generator.py  hybrid_search.py  ingestion_pipeline.py  parser.py  query_transformer.py  retriever.py  rrf.py  system_status.py  workspace_settings.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_documents.py  test_generator.py  test_health.py  test_ingest.py  test_query.py  test_status.py  test_workspace_preferences.py  test_workspaces.py
backend/workers/: __init__.py  ingestion_worker.py
deploy/: Caddyfile.example  Dockerfile  docker-compose.prod.yml
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useSSE.ts  (+2 more)
(+25 files in other folders)
